tests/unit/default/syntax-error/031-create-table-parens-name-colon-type-parens-nums-parens.e.t
---- IN ----
+%table(id:decimal(10,2)
---- OUT ----
---- ERR ----
syntax: expected `)` after `...imal(10,2)` instead of EOL at position 24 - at line 1
---- EXIT ----
1
